Visible and correctly placed

--- a/style.css
+++ b/style.css
@@ -4,29 +4,39 @@ html {
 }
 	
 body { 
-	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 0.7em; 
+	font-family: Futura;
 }
 
 h1 {
-	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
+}
+
+#container {
+  margin: auto;
+  /* height:50%;
+  width: 50%; */
+  max-height: fit-content;
+  max-width: fit-content;
+  min-width: fit-content;
+  align-items: center;
+  justify-content: center;
 }
 
 .board { 
-	background-color: hotpink; 
-	color: black;
-	display: grid; 
-	grid-template-columns: repeat(4, 2fr);
-	gap: 10px;
-	grid-auto-rows: minmax(100px, auto);
+	padding: 1em;
+	height: 200px;
+	width: 200px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 1em;
+	background-color: hotpink;
+	border: 3px double royalblue;
 }
 
 .square { 
-   position:inherit;
 	background-color: aquamarine;
-	height: 20px;
-	width: 20px;
-	border-color: white;
-	border-width: 3px;
+	justify-self: center;
+	align-self: center;
+	height: 90%;
+	width: 90%;
 }
